use github as CDN

--- a/data/blog/2022-06-15-RTI.md
+++ b/data/blog/2022-06-15-RTI.md
@@ -5,7 +5,7 @@ description: We cycled Round Singapore Island
 createdAt: '2022-06-15'
 lastUpdated: '2022-06-15'
 tags: Travel
-heroImage: /images/blog/RTI/maps.png
+heroImage: /images/thumbnail/rti.png
 slug: rti
 ---
 
