add svg favicon

--- a/data/blog/2022-06-15-RTI.md
+++ b/data/blog/2022-06-15-RTI.md
@@ -9,25 +9,25 @@ heroImage: /images/thumbnail/rti.png
 slug: rti
 ---
 
-Sunrise marked the beginning of Hoang and my cycling trip as we embarked on the Round the Island challenge, testing our endurance during this long and arduous journey. The images below capture some memorable moments from our excursion.</br></br>
+Sunrise marked the beginning of Hoang and my cycling trip as we embarked on the Round the Island challenge, testing our endurance during this long and arduous journey. The images below capture some memorable moments from our excursion.
 
 We set off around 7 a.m, just as the sun was rising, and pedaled our way through Stadium to Marina Bay, where we were greeted by the otters starting their day with a sunbath.
-<img src="/images/blog/RTI/otter.jpg"></br>
+<img src="/images/blog/RTI/otter.jpg">
 
 Our next destination was Sentosa, where we nearly completed a full round of the resort island. The steep slopes of Sentosa drained my energy early on in the trip, leading us to take a quick rest at Sentosa Broadwalk.
-<img src="/images/blog/RTI/sentosa.jpg"></br>
+<img src="/images/blog/RTI/sentosa.jpg">
 
 Continuing our journey, we reached Lamp Post 1, the westernmost point of Singapore accessible to cyclists. Along the way, intermittent rain forced us to seek shelter at bus stops and pavilions. When the clouds cleared, the sun beat down relentlessly, but we pressed on, well-protected with gear that made me look like Moon Knight, the avatar of Khonshu.
-<img src="/images/blog/RTI/moonknight.jpg"></br>
+<img src="/images/blog/RTI/moonknight.jpg">
 
 Celebrating our achievement, I proudly lifted my bike and posed at Lamp Post 1, a milestone that marked the completion of 60 kilometers.
-<img src="/images/blog/RTI/bikelifting.jpg"></br>
+<img src="/images/blog/RTI/bikelifting.jpg">
 
 The journey continued with its challenges of sunlight, slopes, and wind, leaving both of us exhausted. After much consideration, we made the difficult decision to cut the trip short and close the circle when we reached the 100-kilometer mark.
-<img src="/images/blog/RTI/withHoang.jpg"></br>
+<img src="/images/blog/RTI/withHoang.jpg">
 
 Despite not reaching our initial goal, we completed an impressive 120-km journey covering the western half of the island.
-<img src="/images/blog/RTI/maps.png"></br>
+<img src="/images/blog/RTI/maps.png">
 
 Finally, I took some time to relax and enjoy the beautiful sunset before concluding our memorable trip.
-<img src="/images/blog/RTI/sunset.jpg"></br></br></br></br>
+<img src="/images/blog/RTI/sunset.jpg">
